--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "google-auth-library": "^9.4.1",
     "googleapis": "^129.0.0",
