--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
+    "firebase-admin": "^12.0.0",
     "google-auth-library": "^9.4.1",
     "googleapis": "^129.0.0",
     "got": "^14.0.0",
