--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,17 @@
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "firebase": "^10.7.1",
+    "plyr": "^3.7.8",
+    "plyr-react": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-modal": "^3.16.1",
-    "react-player": "^2.13.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
