--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,9 @@
     "jade": "~1.11.0",
     "mongoose": "^8.0.2",
     "morgan": "~1.9.1",
-    "nodemailer": "^6.9.7"
+    "razorpay": "^2.9.2"
+  },
+  "devDependencies": {
+    "@types/json-schema": "^7.0.15"
   }
 }
