--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,15 +1,8 @@
-FROM node:20-alpine AS base
+FROM node:20-alpine
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install
 
-FROM base AS development
-COPY . .
-EXPOSE 8080
-CMD [ "npm", "run", "dev" ]
-
-
-FROM base AS production
 COPY . .
 EXPOSE 8080
 CMD ["npm", "start"]
