--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node dist/index.js",
+    "build": "npx tsc",
+    "dev": "nodemon src/index.ts"
   },
-  "type": "module",
   "dependencies": {
+    "@prisma/client": "^5.14.0",
+    "@tanstack/react-query": "^5.36.2",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/cors": "^2.8.17",
+    "@types/got": "^9.6.12",
     "axios": "^1.6.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -17,15 +22,27 @@
     "firebase-admin": "^12.0.0",
     "google-auth-library": "^9.4.1",
     "googleapis": "^129.0.0",
-    "got": "^14.0.0",
+    "got": "^14.2.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^8.0.2",
     "morgan": "~1.9.1",
     "razorpay": "^2.9.2",
-    "sib-api-v3-sdk": "^8.5.0"
+    "shadcn-ui": "^0.8.0",
+    "sib-api-v3-sdk": "^8.5.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/json-schema": "^7.0.15"
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
+    "@types/json-schema": "^7.0.15",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/parser": "^7.8.0",
+    "nodemon": "^3.1.0",
+    "prisma": "^5.14.0",
+    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^5.4.5"
   }
 }
